内存分配与回收策略